# globe-life-automation-coe

./: .gitignore  ENHANCED_REPORTING_SUMMARY.md  FINAL_REPORT_SUMMARY.md  FetchLinks.java  GIT_AUTOMATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LINUX_CHROME_NO_GRID_GUIDE.md  LINUX_GITHUB_ACTIONS_GUIDE.md  PARALLEL_EXECUTION_CONFIG.md  PLAYWRIGHT_DEPENDENCIES_UPDATE.md  POST_BUILD_SELENIUM_GRID_GUIDE.md  README_AI_AGENT.md  REPORT_LAUNCH_FIX.md  SELENIUM_GRID_INTEGRATION.md  SIMPLE_JSON_REPORTING_UPDATE.md  SalesforceDetailsTabLocators.java  SalesforceLeadDetailsFields.java  SalesforceLeadLocators.java  TEST_SUITE_SUMMARY.md  UBUNTU_LIBASOUND2_FIX.md  ai_test_automation_agent.py  conftest.py  conftest_selenium_grid.py  fetch-links.js  generate_enhanced_html_report.py  generate_report.py  pytest.ini  requirements.txt  run_agent.py  run_complete_automation.ps1  run_complete_automation.py  run_selenium_grid_tests_local.bat  run_selenium_grid_tests_local.sh  setup.py  setup_self_hosted_linux_runner.sh  test-playwright.js  test_case_reqs.txt  test_parallel_config.py  test_report_launch.py  test_requirements.txt  (+8 more)
docs/: AGENT_ORCHESTRATOR_QUICK_REFERENCE.md  (+26 more)
raptor-python-playwright/raptor-python-playwright/: .env.example  .gitignore  ACCESSIBILITY_TESTING_INTEGRATION.md  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  ETL_TESTING_INTEGRATION.md  IMPLEMENTATION_STATUS.md  Jenkinsfile  LICENSE  MANIFEST.in  MIGRATION_DOCUMENTATION_COMPLETE.md  PANDAS_TO_POLARS_MIGRATION.md  POLARS_ETL_TESTING_GUIDE.md  README.md  TASK_10_COMPLETION_SUMMARY.md  TASK_11_IMPLEMENTATION_COMPLETE.md  TASK_12_IMPLEMENTATION_COMPLETE.md  TASK_13_IMPLEMENTATION_COMPLETE.md  TASK_14_IMPLEMENTATION_COMPLETE.md  TASK_15_COMPLETION_SUMMARY.md  TASK_35_API_DOCUMENTATION_COMPLETE.md  TASK_39_COMPLETION_SUMMARY.md  TASK_45_PACKAGE_DISTRIBUTION_COMPLETE.md  TASK_46_CI_CD_INTEGRATION_COMPLETE.md  TASK_47_TRAINING_MATERIALS_COMPLETE.md  TASK_49_QUARTO_INTEGRATION_COMPLETE.md  TASK_50_API_TESTING_COMPLETE.md  TASK_51_AI_VISUAL_AUTOMATION_IMPLEMENTATION.md  TASK_51_AI_VISUAL_COMPLETE.md  TASK_52_POLARS_ETL_COMPLETE.md  TASK_6_IMPLEMENTATION_COMPLETE.md  TASK_7.1_READY_FOR_EXECUTION.md  TASK_7_IMPLEMENTATION_COMPLETE.md  USER_DOCUMENTATION_COMPLETE.md  azure-pipelines.yml  pyproject.toml  requirements_ai_visual.txt  setup.cfg  test_import.py  (+3 more)
raptor-python-playwright/raptor-python-playwright/.github/workflows/: ci.yml
raptor-python-playwright/raptor-python-playwright/docs/: ADVANCED_CLICK_METHODS_GUIDE.md  ADVANCED_TABLE_OPERATIONS.md  ADVANCED_TABLE_QUICK_REFERENCE.md  AI_VISUAL_QUICK_START.md  ALM_JIRA_INTEGRATION_GUIDE.md  ALM_JIRA_QUICK_REFERENCE.md  API_REFERENCE_GUIDE.md  API_TESTING_GUIDE.md  API_TESTING_QUICK_REFERENCE.md  BASE_PAGE_QUICK_REFERENCE.md  BROWSER_MANAGER_IMPLEMENTATION.md  CI_CD_INDEX.md  CI_CD_INTEGRATION_GUIDE.md  CI_CD_QUICK_REFERENCE.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_TEARDOWN_GUIDE.md  CLI_GUIDE.md  CLI_QUICK_REFERENCE.md  CODE_GENERATION_GUIDE.md  CODE_GENERATION_QUICK_REFERENCE.md  CONFIGURATION_GUIDE.md  CONFIG_MANAGER_IMPLEMENTATION.md  DATABASE_MANAGER_IMPLEMENTATION.md  DATABASE_QUICK_REFERENCE.md  DATA_DRIVEN_QUICK_REFERENCE.md  DATA_DRIVEN_TESTING_GUIDE.md  DDDB_QUICK_REFERENCE.md  DOCUMENTATION_QUICK_REFERENCE.md  E2E_TESTS_GUIDE.md  E2E_TESTS_QUICK_REFERENCE.md  ELEMENT_INTERACTION_QUICK_REFERENCE.md  ELEMENT_MANAGER_IMPLEMENTATION.md  ELEMENT_STATE_METHODS.md  ELEMENT_STATE_QUICK_REFERENCE.md  EXAMPLES_QUICK_REFERENCE.md  FAQ.md  HELPERS_GUIDE.md  HELPERS_QUICK_REFERENCE.md  HTML_REPORT_PREVIEW.md  INSTALLATION_GUIDE.md  (+112 more)
raptor-python-playwright/raptor-python-playwright/examples/: README_EXAMPLES.md  __init__.py  advanced_click_example.py  advanced_table_example.py  alm_integration_example.py  api_testing_example.py  base_page_example.py  browser_example.py  cleanup_example.py  cleanup_simple_example.py  cli_usage_example.py  codegen_example.py  config_example.py  data_driven_example.py  database_example.py  element_interaction_example.py  element_manager_example.py  element_state_example.py  helpers_example.py  jira_integration_example.py  locator_utilities_example.py  logger_example.py  migration_example.py  polars_etl_example.py  quarto_reporter_example.py  reporter_example.py  screenshot_utilities_example.py  session_example.py  soft_assertion_example.py  synchronization_example.py  table_manager_example.py  test_example_data_driven.py  test_example_login.py  test_example_multi_page_workflow.py  test_example_session_reuse.py  test_example_table_interaction.py  test_execution_control_example.py  wait_helpers_example.py
raptor-python-playwright/raptor-python-playwright/raptor/: __init__.py  cli.py  py.typed
raptor-python-playwright/raptor-python-playwright/scripts/: README.md  build_and_publish.py
raptor-python-playwright/raptor-python-playwright/tests/: README_PERFORMANCE.md  __init__.py  conftest.py  test_alm_integration.py  test_api_testing.py  test_base_page.py  test_browser_manager.py  test_cleanup.py  test_cli.py  test_codegen.py  test_config_manager.py  test_conftest_fixtures.py  test_data_driven.py  test_database_manager.py  test_dddb_integration.py  test_e2e.py  test_element_manager.py  test_element_state_methods.py  test_execution_control.py  test_helpers.py  test_integration.py  test_jira_integration.py  test_locator_utilities.py  test_logger.py  test_migration_utilities.py  test_performance.py  test_polars_etl.py  test_property_browser_launch.py  test_property_click_equivalence.py  test_property_config_isolation.py  test_property_database_idempotence.py  test_property_element_fallback.py  test_property_element_retry.py  test_property_error_context.py  test_property_error_handling_concurrent.py  test_property_parallel_isolation.py  test_property_polars_etl.py  test_property_screenshot_capture.py  test_property_session_persistence.py  test_property_soft_assertions.py  (+11 more)
raptor-python-playwright/raptor-python-playwright/training/: CERTIFICATION_QUIZ.md  HANDS_ON_EXERCISES.md  INDEX.md  README.md  TRAINERS_GUIDE.md  TRAINING_PRESENTATION.md  VIDEO_TUTORIAL_SCRIPTS.md
(+237 files in other folders)
