[metadata]
name = raptor-playwright
version = attr: raptor.__version__
description = RAPTOR Python Playwright Framework - Modern test automation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/raptor-playwright
author = RAPTOR Team
author_email = automation@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Framework :: Pytest
    Operating System :: OS Independent
keywords = playwright, automation, testing, selenium, framework, test-automation
project_urls =
    Documentation = https://raptor-playwright.readthedocs.io
    Source = https://github.com/example/raptor-playwright
    Tracker = https://github.com/example/raptor-playwright/issues
    Changelog = https://github.com/example/raptor-playwright/blob/main/CHANGELOG.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    playwright>=1.40.0
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    pyodbc>=5.0.0
    click>=8.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = raptor*
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    hypothesis>=6.90.0
    pytest-cov>=4.1.0
    pytest-html>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    build>=0.10.0
    twine>=4.0.0
reporting =
    allure-pytest>=2.13.0
parallel =
    pytest-xdist>=3.5.0
all =
    %(dev)s
    %(reporting)s
    %(parallel)s

[options.entry_points]
console_scripts =
    raptor = raptor.cli:main

[options.package_data]
raptor =
    py.typed
    config/*.yaml
    config/*.yml
    config/environments/*.yaml
    config/environments/*.yml

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .pytest_cache,
    .mypy_cache,
    .hypothesis,
    venv,
    .venv
ignore = E203, E266, E501, W503
max-complexity = 10
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[coverage:run]
source = raptor
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
precision = 2
show_missing = True

[coverage:html]
directory = htmlcov

[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
markers =
    asyncio: mark test as async
    browser: mark test as requiring browser
    database: mark test as requiring database
    integration: mark test as integration test
    slow: mark test as slow running
    property: mark test as property-based test
    smoke: mark test as smoke test
    regression: mark test as regression test
    flaky: mark test as potentially flaky
    performance: mark test as performance test

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

